<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_explore"
            android:enabled="true"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/explore"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_social"
            android:enabled="true"
            android:icon="@drawable/ic_group_gray_24dp"
            android:title="@string/social"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/center"
            android:enabled="false"
            android:title=""

            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_inbox"
            android:enabled="true"
            android:icon="@drawable/ic_notifications_gray_24dp"
            android:title="@string/inbox"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_more"
            android:enabled="true"
            android:icon="@drawable/ic_dehaze_gray_24dp"
            android:title="@string/more"
            app:showAsAction="ifRoom"/>
</menu>