<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.main.ReportFragment"
        android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout android:layout_width="match_parent"
                                                android:layout_height="wrap_content">
        <include layout="@layout/tool_bar"/>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
            android:id="@+id/layout_report"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RadioGroup
                android:id="@+id/rdgrp_report"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/type_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/report_type_fake"
            />
            <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/type_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/report_type_sex"
            />
            <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/type_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/report_type_other"
            />
        </RadioGroup>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>