<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.auth.LoginFragment"
        android:fitsSystemWindows="true">
    <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <View android:layout_width="0dp" android:layout_height="0dp" android:background="@drawable/header_bg"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintHeight_min="128dp"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
              android:fitsSystemWindows="true"
              android:id="@+id/view"/>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_max="@dimen/input_text_constraint_width_max"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                android:layout_marginTop="16dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/padding_input_field"
                    android:drawableStart="@drawable/ic_person_gray_24dp"
                    android:inputType="textEmailAddress"
                    android:gravity="center|start"
                    android:hint="@string/email"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_max="@dimen/input_text_constraint_width_max"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_email" android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:gravity="center|start"
                    android:hint="@string/password"
                    android:drawablePadding="@dimen/padding_input_field"
                    android:drawableStart="@drawable/ic_lock_gray_24dp"
            />
        </android.support.design.widget.TextInputLayout>


        <TextView
                android:text="Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/view" app:layout_constraintBottom_toBottomOf="@+id/view"
                android:textStyle="bold" android:textSize="24sp" android:textColor="@android:color/white"/>
        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                app:layout_constraintWidth_max="@dimen/input_button_constraint_width_max"
                android:layout_height="@dimen/btn_height"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:text="@string/login"
                android:textAllCaps="true"
                style="@style/AppTheme.PrimaryButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
                android:layout_marginTop="16dp"/>
        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="0dp"
                app:layout_constraintWidth_max="@dimen/input_button_constraint_width_max"
                android:layout_height="@dimen/btn_height"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                style="@style/AppTheme.PrimaryButtonBorder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" android:layout_marginTop="16dp"/>
        <TextView
                android:padding="5dp"
                android:foreground="@drawable/bg_selectable_menu_2"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_forgot_password" app:layout_constraintEnd_toEndOf="@+id/layout_password"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_password" android:textSize="16sp"
                android:textColor="#2196F3"/>
        <android.support.v7.widget.AppCompatImageButton
                android:src="@drawable/ic_settings_gray_24dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/btn_setting"
                style="?attr/actionButtonStyle" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
    <include layout="@layout/loading" android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>