<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.auth.SignUpFragment"
        android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout android:layout_width="match_parent"
                                                android:layout_height="wrap_content">
        <include layout="@layout/tool_bar"/>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
            android:id="@+id/layout_sign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_displayName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_max="@dimen/input_text_constraint_width_max"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="32dp" android:layout_marginEnd="32dp">
                <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_displayName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="@dimen/padding_input_field"
                        android:drawableStart="@drawable/ic_person_gray_24dp"
                        android:inputType="textCapWords"
                        android:gravity="center|start"
                        android:hint="@string/display_name"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_max="@dimen/input_text_constraint_width_max"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_displayName" android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp" android:layout_marginEnd="32dp">
                <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="@dimen/padding_input_field"
                        android:drawableStart="@drawable/ic_email_gray_24dp"
                        android:inputType="textEmailAddress"
                        android:gravity="center|start"
                        android:hint="@string/email"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_max="@dimen/input_text_constraint_width_max"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/layout_email"
                    android:layout_marginStart="32dp" android:layout_marginEnd="32dp">
                <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:gravity="center|start"
                        android:hint="@string/password"
                        android:drawablePadding="@dimen/padding_input_field"
                        android:drawableStart="@drawable/ic_lock_gray_24dp"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_sign_up"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_max="@dimen/input_button_constraint_width_max"
                    android:layout_height="@dimen/btn_height"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"
                    style="@style/AppTheme.PrimaryButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_password" android:layout_marginTop="32dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
    <include layout="@layout/layout_message_page_success" android:id="@+id/layout_done" android:visibility="invisible"/>
</android.support.design.widget.CoordinatorLayout>