<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.main.FilterFragment"
        android:fitsSystemWindows="true"
        android:background="@android:color/white">
    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="16dp"
                      android:layout_marginEnd="16dp">
            <android.support.constraint.ConstraintLayout
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <android.support.v7.widget.AppCompatImageView
                        android:clickable="true"
                        android:focusable="true"
                        style="?attr/actionButtonStyle"
                        android:src="@drawable/ic_refresh_gray_24dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp" android:id="@+id/btn_reset"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.SubHeader"
                        android:text="@string/date"
                        android:id="@+id/appCompatTextView" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/btn_reset"/>
                <TextView
                        android:text="MMM d, YYYY"
                        android:padding="5dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/dp_start_date"
                        app:layout_constraintTop_toBottomOf="@+id/tv_start_date" android:textAlignment="viewStart"
                        android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:drawableEnd="@drawable/ic_arrow_drop_down_gray_24dp"
                        android:foreground="@drawable/bg_selectable_menu_1"
                        android:layout_marginTop="8dp" android:textStyle="bold"
                        android:textColor="@color/colorAccent"/>
                <TextView
                        android:padding="5dp"
                        android:text="MMM d, YYYY"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/dp_end_date"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_end_date" android:textAlignment="viewStart"
                        android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:drawableEnd="@drawable/ic_arrow_drop_down_gray_24dp"
                        android:foreground="@drawable/bg_selectable_menu_1" android:textStyle="bold"
                        android:textColor="@color/colorAccent"/>
                <TextView
                        android:text="@string/from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_start_date" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
                        app:layout_constraintStart_toStartOf="@+id/dp_start_date"
                        android:textAlignment="viewStart"/>
                <TextView
                        android:text="@string/to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_end_date" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/dp_start_date"
                        app:layout_constraintStart_toStartOf="@+id/dp_end_date"
                        android:textAlignment="viewStart"/>
            </android.support.constraint.ConstraintLayout>
            <android.support.constraint.ConstraintLayout
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.SubHeader"
                        android:text="@string/distance"
                        android:id="@+id/appCompatTextView2"/>
                <android.support.v7.widget.AppCompatSeekBar
                        android:max="3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="8dp"
                        style="@style/AppTheme.SeekBar"
                        android:layout_marginEnd="8dp" android:id="@+id/sb_distance"/>
                <TextView
                        android:text="2000m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
                <TextView
                        android:text="15000m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintTop_toTopOf="@+id/textView2"/>
                <android.support.v7.widget.AppCompatButton
                        android:text="@string/apply"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_ok"
                        android:layout_marginTop="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/sb_distance"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        style="@style/AppTheme.AccentButton"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"/>
                <TextView
                        android:text="2000m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_distance" app:layout_constraintEnd_toStartOf="@+id/textView3"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintBottom_toBottomOf="@+id/textView2"
                        app:layout_constraintTop_toTopOf="@+id/textView2" android:textStyle="bold"
                        android:textColor="@color/colorAccent"/>
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>